--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProShots | Elevate Your Image</title>
+    <title>ProShots | AI Professional Studio</title>
+    <meta name="description" content="Generate 25+ studio-quality professional headshots and stylized characters using the Gemini 3 Pro Neural Engine.">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -17,6 +18,11 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        /* Custom scrollbar for better aesthetics */
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: #f8fafc; }
+        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
+        ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
 <script type="importmap">
 {
@@ -30,7 +36,8 @@
 }
 </script>
 </head>
-<body class="bg-white text-slate-900">
+<body class="bg-white text-slate-900 selection:bg-slate-900 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
