feat: Add global process.env shim and Gemini API key handling
Introduces a global shim for `process.env` in the browser environment to ensure compatibility with libraries expecting it during deployment.

Enhances Gemini API calls to dynamically fetch the API key from `process.env` and includes more robust error handling for authentication and safety block issues, providing clearer user feedback. The `callGeminiWithRetry` function now expects an initialized `GoogleGenAI` instance.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-        /* Custom scrollbar for better aesthetics */
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: #f8fafc; }
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
         ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
+    <script>
+      // Global shim for process.env to ensure deployment stability
+      window.process = window.process || { env: {} };
+    </script>
 <script type="importmap">
 {
   "imports": {
